--- a/produit-service/src/main/resources/application.properties
+++ b/produit-service/src/main/resources/application.properties
@@ -3,9 +3,11 @@ spring.application.name=produit-service
 
 server.port=9090
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:produits-bd
+spring.datasource.url=jdbc:h2:mem:produit-bd
 
 
 
 spring.cloud.config.enabled=false
-spring.cloud.discovery.enabled=false
+spring.cloud.discovery.enabled=true
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
